--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,30 @@
 {%extends "layout2.html"%}
+{%from "_macros.html" import input_Form%}
 {%block content %}
-<h1>Saludos desde index</h1>
+    
+        <div class="container">  
+            <div class="row">
+                <form name="registro" action="/index" method="post">
+                    <div class="row control-group">
+                        <div class="form-group col-xs-12 float-label-form-group controls">
+                            {{input_Form(form.nombre,class="form-control")}}
+                        </div>
+                    </div>
+                    <div class="row control-group">
+                        <div class="form-group col-xs-12 float-label-form-group controls">
+                            {{input_Form(form.apaterno,class="form-control")}}
+                        </div>
+                    </div>
+                    <div class="row control-group">
+                        <div class="form-group col-xs-12 float-label-form-group controls">
+                            {{input_Form(form.email,class="form-control")}}
+                        </div>
+                    </div>
+                    <input type="hidden", name ="csrf_token" value="{{csrf_token()}}"/>
+                    <input type="submit" id="registrar" name="registrar" value="Registrar"/> 
+                </form>   
+            </div>
+        </div>
+    
 {%endblock%}
              
